Server/ create security configuration #5

--- a/portal/src/main/resources/application.properties
+++ b/portal/src/main/resources/application.properties
@@ -10,6 +10,12 @@ spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
 logging.pattern.console=%-5level %logger{36} - %msg %n
 # ==============================================================
+# = Spring Security / Queries for AuthenticationManagerBuilder
+# ==============================================================
+spring.queries.users-query=select email, password, active from aggregator.users where email=?
+spring.queries.roles-query=select u.email, r.role from aggregator.users u inner join aggregator.user_role ur on u.id = \
+ur.user_id inner join aggregator.role r on ur.role_id = r.id where u.email=?
+# ==============================================================
 # = PostgreSQL Data Source
 # ==============================================================
 spring.datasource.url=jdbc:postgresql://localhost:5432/pd_aggregator
