--- a/portal/build.gradle
+++ b/portal/build.gradle
@@ -22,57 +22,56 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-//    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
-//    implementation 'org.springframework.boot:spring-boot-starter-security'
-//    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-//    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'org.postgresql:postgresql'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-//    testImplementation 'org.springframework.security:spring-security-test'
+    testImplementation 'org.springframework.security:spring-security-test'
 }
 
 test {
     useJUnitPlatform()
 }
 
-def webappDir = "$projectDir/src/main/resources/client"
-sourceSets {
-    main {
-        resources {
-            srcDirs = ["$webappDir/dist", "$projectDir/src/main/resources"]
-        }
-    }
-}
-
-processResources {
-    dependsOn "buildAngular"
-}
-
-task buildAngular(type:Exec) {
-    dependsOn "installAngular"
-    workingDir "$webappDir"
-    inputs.dir "$webappDir"
-    group = BasePlugin.BUILD_GROUP
-    if (System.getProperty("os.name").toUpperCase().contains("WINDOWS")){
-        commandLine "ng.cmd", "build"
-    } else {
-        commandLine "ng", "build"
-    }
-}
-
-task installAngular(type:Exec) {
-    workingDir "$webappDir"
-    inputs.dir "$webappDir"
-    group = BasePlugin.BUILD_GROUP
-    if (System.getProperty("os.name").toUpperCase().contains("WINDOWS")){
-        commandLine "npm.cmd", "install"
-    } else {
-        commandLine "npm", "install"
-    }
-}
+//def webappDir = "$projectDir/src/main/resources/client"
+//sourceSets {
+//    main {
+//        resources {
+//            srcDirs = ["$webappDir/dist", "$projectDir/src/main/resources"]
+//        }
+//    }
+//}
+//
+//processResources {
+//    dependsOn "buildAngular"
+//}
+//
+//task buildAngular(type:Exec) {
+//    dependsOn "sourceSets"
+//    dependsOn "installAngular"
+//    workingDir "$webappDir"
+//    inputs.dir "$webappDir"
+//    group = BasePlugin.BUILD_GROUP
+//    if (System.getProperty("os.name").toUpperCase().contains("WINDOWS")){
+//        commandLine "ng.cmd", "build"
+//    } else {
+//        commandLine "ng", "build"
+//    }
+//}
+//
+//task installAngular(type:Exec) {
+//    workingDir "$webappDir"
+//    inputs.dir "$webappDir"
+//    group = BasePlugin.BUILD_GROUP
+//    if (System.getProperty("os.name").toUpperCase().contains("WINDOWS")){
+//        commandLine "npm.cmd", "install"
+//    } else {
+//        commandLine "npm", "install"
+//    }
+//}
 
 springBoot {
     buildInfo()
