Docker/ build docker container for scanner and portal #31

--- a/portal/Dockerfile
+++ b/portal/Dockerfile
@@ -1,7 +1,7 @@
 FROM amazoncorretto:11
 RUN mkdir -p /user/src/app/
 WORKDIR /user/src/app/
-EXPOSE 8082
+EXPOSE 8081
 
-ADD build/libs/scanner-0.0.1-SNAPSHOT.jar /user/src/app/app.jar
+ADD build/libs/portal-0.0.1-SNAPSHOT.jar /user/src/app/app.jar
 ENTRYPOINT ["java","-jar","/user/src/app/app.jar"]
