--- a/portal/src/main/resources/application.properties
+++ b/portal/src/main/resources/application.properties
@@ -18,7 +18,7 @@ ur.user_id inner join aggregator.role r on ur.role_id = r.id where u.email=?
 # ==============================================================
 # = PostgreSQL Data Source
 # ==============================================================
-spring.datasource.url=jdbc:postgresql://localhost:5432/pd_aggregator
+spring.datasource.url=jdbc:postgresql://postgres:5432/pd_aggregator
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=pd_aggregator
 spring.datasource.password=pd_aggregator
@@ -43,3 +43,7 @@ spring.main.allow-bean-definition-overriding=true
 # ==============================================================
 management.endpoints.enabled-by-default=false
 management.endpoint.info.enabled=true
+# ==============================================================
+# = Spring Boot Server
+# ==============================================================
+server.port=8081
