--- a/scanner/src/main/resources/application.properties
+++ b/scanner/src/main/resources/application.properties
@@ -9,10 +9,11 @@ logging.level.liquibase=INFO
 spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
 logging.pattern.console=%-5level %logger{36} - %msg %n
+logging.file.path = /var/tmp/
 # ==============================================================
 # = PostgreSQL Data Source
 # ==============================================================
-spring.datasource.url=jdbc:postgresql://localhost:5432/pd_aggregator
+spring.datasource.url=jdbc:postgresql://postgres:5432/pd_aggregator
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=pd_aggregator
 spring.datasource.password=pd_aggregator
@@ -36,3 +37,7 @@ spring.main.allow-bean-definition-overriding=false
 # ==============================================================
 management.endpoints.enabled-by-default=false
 management.endpoint.info.enabled=true
+# ==============================================================
+# = Spring Boot Server
+# ==============================================================
+server.port=8082
