--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,6 @@ version: "3.9"
 services:
   postgres:
     image: postgres:9.6
-    network_mode: bridge
     container_name: postgres
     volumes:
       - postgres-data:/var/lib/postgresql/data
@@ -10,23 +9,79 @@ services:
       - 5432
     ports:
       - 5432:5432
+    restart: unless-stopped
     environment:
       - POSTGRES_PASSWORD=pd_aggregator
       - POSTGRES_USER=pd_aggregator
       - POSTGRES_DB=pd_aggregator
-#    restart: unless-stopped
+
+  portal:
+    image: portal:latest
+    container_name: portal
+    build: portal
+    restart: unless-stopped
+    links:
+      - "postgres:database"
+    expose:
+      - 8081
+    ports:
+      - 8081:8081
+
+  client:
+    image: client:latest
+    container_name: client
+    build: client
+    restart: unless-stopped
+    depends_on:
+      - portal
+    links:
+      - portal
+    expose:
+      - 8888
+    ports:
+      - 8888:80
+
+  hub:
+    image: selenium/hub
+    container_name: hub
+    restart: unless-stopped
+    ports:
+      - "4444:4444"
+    environment:
+      GRID_MAX_SESSION: 16
+      GRID_BROWSER_TIMEOUT: 3000
+      GRID_TIMEOUT: 3000
+
+  firefox:
+    image: selenium/node-firefox
+    container_name: firefox
+    restart: unless-stopped
+    depends_on:
+      - hub
+    environment:
+      HUB_PORT_4444_TCP_ADDR: hub
+      HUB_PORT_4444_TCP_PORT: 4444
+      NODE_MAX_SESSION: 2
+      NODE_MAX_INSTANCES: 2
+    volumes:
+      - /dev/shm:/dev/shm
+    ports:
+      - "9002:5900"
+    links:
+      - hub
+
   scanner:
     image: scanner:latest
-    network_mode: bridge
     container_name: scanner
-    expose:
-      - 8080
-    ports:
-      - 8080:8080
-    depends_on:
-      - postgres
+    build: scanner
     links:
-      - postgres
-#    restart: unless-stopped
+      - "postgres:database"
+      - hub
+    expose:
+      - 8082
+    ports:
+      - 8082:8082
+    restart: unless-stopped
+
 volumes:
   postgres-data:
