--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -25,5 +25,17 @@ http {
                 proxy_set_header X-NginX-Proxy true;
                 proxy_cache_bypass $http_upgrade;
             }
+
+        location /actuator/ {
+                        proxy_http_version 1.1;
+                        proxy_pass http://portal:8081/actuator/;
+                        proxy_set_header Upgrade $http_upgrade;
+                        proxy_set_header Connection 'upgrade';
+                        proxy_set_header Host $host;
+                        proxy_set_header X-Real-IP $remote_addr;
+                        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+                        proxy_set_header X-NginX-Proxy true;
+                        proxy_cache_bypass $http_upgrade;
+                    }
     }
 }
