--- a/portal/src/main/resources/application.properties
+++ b/portal/src/main/resources/application.properties
@@ -35,9 +35,9 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 # = Spring data
 # ==============================================================
 spring.jpa.hibernate.ddl-auto=none
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.main.allow-bean-definition-overriding=true
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=false
+spring.main.allow-bean-definition-overriding=false
 # ==============================================================
 # = Spring Boot Actuator
 # ==============================================================
