--- a/portal/src/main/resources/application.properties
+++ b/portal/src/main/resources/application.properties
@@ -13,8 +13,7 @@ logging.pattern.console=%-5level %logger{36} - %msg %n
 # = Spring Security / Queries for AuthenticationManagerBuilder
 # ==============================================================
 spring.queries.users-query=select email, password, active from aggregator.users where email=?
-spring.queries.roles-query=select u.email, r.role from aggregator.users u inner join aggregator.user_role ur on u.id = \
-ur.user_id inner join aggregator.role r on ur.role_id = r.id where u.email=?
+spring.queries.roles-query=select u.email, r.roles from aggregator.users u inner join aggregator.roles r on u.roles_id = r.id where u.email=?
 # ==============================================================
 # = PostgreSQL Data Source
 # ==============================================================
