Client/ Server cannot update or edit company #36

--- a/portal/src/main/resources/application.properties
+++ b/portal/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.queries.roles-query=select u.email, r.roles from aggregator.users u inner
 # ==============================================================
 # = PostgreSQL Data Source
 # ==============================================================
-spring.datasource.url=jdbc:postgresql://postgres:5432/pd_aggregator
+spring.datasource.url=jdbc:postgresql://localhost:5432/pd_aggregator
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=pd_aggregator
 spring.datasource.password=pd_aggregator
