--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,34 +41,25 @@ services:
     ports:
       - 8888:80
 
-  hub:
-    image: selenium/hub
-    container_name: hub
-    restart: always
-    ports:
-      - "4444:4444"
-    environment:
-      GRID_MAX_SESSION: 16
-      GRID_BROWSER_TIMEOUT: 3000
-      GRID_TIMEOUT: 3000
-
   firefox:
-    image: selenium/node-firefox
+    image: selenium/node-firefox:dev
     container_name: firefox
-    restart: always
+    shm_size: 2gb
     depends_on:
-      - hub
+      - selenium-hub
     environment:
-      HUB_PORT_4444_TCP_ADDR: hub
-      HUB_PORT_4444_TCP_PORT: 4444
-      NODE_MAX_SESSION: 2
-      NODE_MAX_INSTANCES: 2
-    volumes:
-      - /dev/shm:/dev/shm
+      - SE_EVENT_BUS_HOST=selenium-hub
+      - SE_EVENT_BUS_PUBLISH_PORT=4442
+      - SE_EVENT_BUS_SUBSCRIBE_PORT=4443
+      - SE_NODE_GRID_URL=http://localhost:4444
+
+  selenium-hub:
+    image: selenium/hub:latest
+    container_name: selenium-hub
     ports:
-      - "9002:5900"
-    links:
-      - hub
+      - "4442:4442"
+      - "4443:4443"
+      - "4444:4444"
 
   scanner:
     image: scanner:latest
@@ -76,7 +67,7 @@ services:
     build: scanner
     links:
       - "postgres:database"
-      - hub
+      - selenium-hub
     expose:
       - 8082
     ports:
