--- a/scanner/src/main/resources/application.properties
+++ b/scanner/src/main/resources/application.properties
@@ -13,7 +13,8 @@ logging.file.path = /var/tmp/
 # ==============================================================
 # = PostgreSQL Data Source
 # ==============================================================
-spring.datasource.url=jdbc:postgresql://postgres:5432/pd_aggregator
+spring.datasource.url=jdbc:postgresql://localhost:5432/pd_aggregator
+# spring.datasource.url=jdbc:postgresql://postgres:5432/pd_aggregator
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=pd_aggregator
 spring.datasource.password=pd_aggregator
