--- a/commons/build.gradle
+++ b/commons/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
     id 'org.siouan.frontend-jdk11' version '5.0.0'
+    id 'maven-publish'
 }
 
 group = 'dplatonov'
@@ -17,6 +18,7 @@ configurations {
 
 repositories {
     mavenCentral()
+    mavenLocal()
 }
 
 dependencies {
@@ -31,4 +33,13 @@ dependencies {
 
 tasks.named('test') {
     useJUnitPlatform()
+}
+
+publishing {
+    publications {
+        maven(MavenPublication) {
+
+            artifact bootJar
+        }
+    }
 }
