--- a/portal/src/main/resources/application.properties
+++ b/portal/src/main/resources/application.properties
@@ -47,3 +47,11 @@ management.endpoint.info.enabled=true
 # = Spring Boot Server
 # ==============================================================
 server.port=8081
+# ==============================================================
+# = Kafka
+# ==============================================================
+spring.kafka.bootstrap-servers=localhost:9092
+monitor.kafka.bootstrap.config=localhost:9092
+scanner.topic=action
+message.topic.name=scanner
+monitor.kafka.consumer.groupid=scanner
