--- a/scanner/src/main/resources/application.properties
+++ b/scanner/src/main/resources/application.properties
@@ -42,3 +42,11 @@ management.endpoint.info.enabled=true
 # = Spring Boot Server
 # ==============================================================
 server.port=8082
+# ==============================================================
+# = Kafka
+# ==============================================================
+spring.kafka.bootstrap-servers=localhost:9092
+monitor.kafka.bootstrap.config=localhost:9092
+scanner.topic=action
+message.topic.name=scanner
+monitor.kafka.consumer.groupid=scanner
