Server/ send and receive kafka message - start/stop and scanner is complete. #42

--- a/portal/src/main/resources/application.properties
+++ b/portal/src/main/resources/application.properties
@@ -52,6 +52,8 @@ server.port=8081
 # ==============================================================
 spring.kafka.bootstrap-servers=localhost:9092
 monitor.kafka.bootstrap.config=localhost:9092
-scanner.topic=action
-message.topic.name=scanner
+scanner.topic1=action
+scanner.topic2=result
+message.topic.action=action
+message.topic.result=result
 monitor.kafka.consumer.groupid=scanner
