--- a/scanner/src/main/resources/application.properties
+++ b/scanner/src/main/resources/application.properties
@@ -9,7 +9,7 @@ logging.level.liquibase=INFO
 spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
 logging.pattern.console=%-5level %logger{36} - %msg %n
-logging.file.path = /var/tmp/
+logging.file.path=/var/tmp/
 # ==============================================================
 # = PostgreSQL Data Source
 # ==============================================================
@@ -47,6 +47,8 @@ server.port=8082
 # ==============================================================
 spring.kafka.bootstrap-servers=localhost:9092
 monitor.kafka.bootstrap.config=localhost:9092
-scanner.topic=action
-message.topic.name=scanner
+scanner.topic1=action
+scanner.topic2=result
+message.topic.action=action
+message.topic.result=result
 monitor.kafka.consumer.groupid=scanner
