Server/ generate .csv and .xlsx files from result of scanner work. #46 Client/ create view page #45 Client/ In view page create buttons to download files in format .csv and .xlsx #44

--- a/scanner/src/main/resources/application.properties
+++ b/scanner/src/main/resources/application.properties
@@ -13,8 +13,8 @@ logging.file.path=/var/tmp/
 # ==============================================================
 # = PostgreSQL Data Source
 # ==============================================================
-spring.datasource.url=jdbc:postgresql://localhost:5432/pd_aggregator
-# spring.datasource.url=jdbc:postgresql://postgres:5432/pd_aggregator
+#spring.datasource.url=jdbc:postgresql://localhost:5432/pd_aggregator
+ spring.datasource.url=jdbc:postgresql://postgres:5432/pd_aggregator
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=pd_aggregator
 spring.datasource.password=pd_aggregator
@@ -45,8 +45,8 @@ server.port=8082
 # ==============================================================
 # = Kafka
 # ==============================================================
-spring.kafka.bootstrap-servers=localhost:9092
-monitor.kafka.bootstrap.config=localhost:9092
+spring.kafka.bootstrap-servers=kafka:29092
+monitor.kafka.bootstrap.config=kafka:29092
 scanner.topic1=action
 scanner.topic2=result
 message.topic.action=action
