--- a/portal/Dockerfile
+++ b/portal/Dockerfile
@@ -3,5 +3,5 @@ RUN mkdir -p /user/src/app/
 WORKDIR /user/src/app/
 EXPOSE 8081
 
-ADD build/libs/portal-0.0.1-SNAPSHOT.jar /user/src/app/app.jar
+ADD build/libs/portal-0.0.2.jar /user/src/app/app.jar
 ENTRYPOINT ["java","-jar","/user/src/app/app.jar"]
