--- a/portal/src/main/resources/application.properties
+++ b/portal/src/main/resources/application.properties
@@ -17,8 +17,8 @@ spring.queries.roles-query=select u.email, r.roles from aggregator.users u inner
 # ==============================================================
 # = PostgreSQL Data Source
 # ==============================================================
-spring.datasource.url=jdbc:postgresql://localhost:5432/pd_aggregator
-# spring.datasource.url=jdbc:postgresql://postgres:5432/pd_aggregator
+#spring.datasource.url=jdbc:postgresql://localhost:5432/pd_aggregator
+spring.datasource.url=jdbc:postgresql://postgres:5432/pd_aggregator
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=pd_aggregator
 spring.datasource.password=pd_aggregator
@@ -50,8 +50,8 @@ server.port=8081
 # ==============================================================
 # = Kafka
 # ==============================================================
-spring.kafka.bootstrap-servers=localhost:9092
-monitor.kafka.bootstrap.config=localhost:9092
+spring.kafka.bootstrap-servers=kafka:29092
+monitor.kafka.bootstrap.config=kafka:29092
 scanner.topic1=action
 scanner.topic2=result
 message.topic.action=action
